Added device width, added dark mode

--- a/style.css
+++ b/style.css
@@ -21,3 +21,10 @@ a:hover {
 	padding-top: 2px;
 	background-color: #FF4F00;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #EFEFEF;
+    background: #161616;
+  }
+}
